Fix Java 8 build errors in ntcore
* @Deprecated has no args in Java 8.
* No List.of()
* Lots of ByteBuffer methods don't chain in Java 8.